Bug 430720 - Not all Umbrello global settings are saved to the resource file
Summary: Not all Umbrello global settings are saved to the resource file
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-22 21:07 UTC by Oliver Kellogg
Modified: 2021-02-11 23:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.33.80 (KDE releases 21.03.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Kellogg 2020-12-22 21:07:36 UTC
SUMMARY

Not all global settings are saved to Umbrello's resource file
($HOME/.config/umbrellorc)

STEPS TO REPRODUCE
1. Start Umbrello.
2. In the top menubar select Settings -> Configure Umbrello...
3. In the Startup group, at Default Language select a different language.
4. Exit and restart Umbrello.
5. Again select Settings -> Configure Umbrello...

OBSERVED RESULT

In the Startup group, the Default Language remains C++.

EXPECTED RESULT

In Settings -> Configure Umbrello, the Default Language should be the previously changed language.
It may be that the problem also applies to other settings; I haven't checked.

SOFTWARE/OS VERSIONS
Umbrello: git master @ aefbac0
Linux: openSuSE Tumbleweed 20201129
KDE Plasma Version: 5.20.3
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.2
Comment 1 Oliver Kellogg 2020-12-22 21:16:14 UTC
Git commit bb0e5c956daa2803071e8a7d78b5f906d2b5343d by Oliver Kellogg.
Committed on 22/12/2020 at 21:15.
Pushed by okellogg into branch 'master'.

Fix 'Not all Umbrello global settings are saved to the resource file'

umbrello/dialogs/settingsdialog.cpp function slotOk()
- Add call to m_pOptionState->save() after calls to applyPage().

M  +1    -0    umbrello/dialogs/settingsdialog.cpp

https://invent.kde.org/sdk/umbrello/commit/bb0e5c956daa2803071e8a7d78b5f906d2b5343d