Fix 'Not all Umbrello global settings are saved to the resource file'

umbrello/dialogs/settingsdialog.cpp function slotOk()
- Add call to m_pOptionState->save() after calls to applyPage().

BUG: 430720